# human-browser-use

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_ja.md  README_zh.md  pyproject.toml  skill.md  test_demo.py  test_mouse_tracker.html  test_tracker.py
human_browser_use/: __init__.py  config.py  profile.py  session.py
human_browser_use/actor/: __init__.py  element.py  mouse.py  page.py
human_browser_use/behavior/: __init__.py  keyboard_dynamics.py  mouse_trajectory.py  scroll_dynamics.py  timing.py
human_browser_use/cli/: __init__.py  main.py  server.py
human_browser_use/stealth/: __init__.py  injection.py
human_browser_use/stealth/scripts/: __init__.py  canvas.py  chrome_runtime.py  dimensions.py  navigator.py  webgl.py
human_browser_use/watchdogs/: __init__.py  human_action_watchdog.py
